Revert "feat: remove desktop bounty UI (#2493)"
This reverts commit d631c251828ff64d6f427aa0522b4583a3623727.
