# openapi/openapi-ts.config.ts
@@ -8,6 +8,7 @@ export default defineConfig({
     "./openapi/openapi-seren-private-models.json",
     "./openapi/openapi-seren-agent.json",
     "./openapi/openapi-seren-skills.json",
+    "./openapi/openapi-seren-bounty.json",
   ],
   output: [
     {
@@ -27,6 +28,9 @@ export default defineConfig({
     },
     {
       path: "src/api/generated/seren-skills",
+    },
+    {
+      path: "src/api/generated/seren-bounty",
     },
   ],
   plugins: [
